<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModelData"
            type="com.trustathanas.absaclone.activities.home.home.HomeViewModel" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.home.home.HomeFragment">
        <!-- TODO: Update blank fragment layout -->

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_user_thumbnail"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_account_circle_black_24dp" />

            <TextView
                android:id="@+id/tv_full_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:lineSpacingExtra="8sp"
                android:text="@{viewModelData.clientFullName}"
                android:textSize="16sp"
                android:textStyle="bold"
                android:typeface="monospace"
                app:layout_constraintStart_toEndOf="@+id/img_user_thumbnail"
                app:layout_constraintTop_toTopOf="@+id/img_user_thumbnail"
                tools:text="John Doe" />

            <TextView
                android:id="@+id/tv_account_type_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@{viewModelData.accountTypeLabel}"
                android:typeface="normal"
                app:layout_constraintStart_toEndOf="@+id/img_user_thumbnail"
                app:layout_constraintTop_toBottomOf="@+id/tv_full_name"
                tools:text="Savings Account" />


            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_service_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_user_thumbnail"
                tools:itemCount="3"
                tools:listitem="@layout/layout_service_list_item">

            </android.support.v7.widget.RecyclerView>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_service_list"
                app:layout_constraintVertical_bias="0.0">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/accounts_section_label" />

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:elevation="4dp">

                        <android.support.constraint.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/card_background_style"
                            android:padding="16dp">

                            <TextView
                                android:id="@+id/tv_card_account_type"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{viewModelData.accountType}"
                                android:textColor="@android:color/white"
                                android:textSize="18sp"
                                android:textStyle="bold"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                tools:text="Current Account" />

                            <TextView
                                android:id="@+id/tv_card_account_number"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/roboto"
                                android:text="@{viewModelData.accountNumber}"
                                android:textColor="@android:color/white"

                                android:textSize="18sp"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/tv_card_account_type"
                                tools:text="123 456 67879" />

                            <TextView
                                android:id="@+id/textView10"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"

                                android:layout_marginEnd="8dp"
                                android:text="@string/available_balance_label"
                                android:textColor="@android:color/white"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/tv_card_balance" />

                            <TextView
                                android:id="@+id/tv_card_balance"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="32dp"
                                android:layout_marginEnd="8dp"

                                android:text="@{viewModelData.balance}"
                                android:textColor="@android:color/white"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/tv_card_account_number"
                                tools:text="1 000 000.00" />

                            <TextView
                                android:id="@+id/textView9"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="4dp"
                                android:text="@string/zar_currency_code"
                                android:textColor="@android:color/white"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                app:layout_constraintBottom_toBottomOf="@+id/tv_card_balance"
                                app:layout_constraintEnd_toStartOf="@+id/tv_card_balance"
                                app:layout_constraintTop_toTopOf="@+id/tv_card_balance" />


                        </android.support.constraint.ConstraintLayout>
                    </android.support.v7.widget.CardView>

                </LinearLayout>
            </ScrollView>

        </android.support.constraint.ConstraintLayout>

    </FrameLayout>
</layout>